# spoLab_15

./: CMakeLists.txt  CMakeSettings.json
CMakeProject2/: CMakeLists.txt
CMakeProject2/client/: client.c  client.h  client_main.c
CMakeProject2/datafile/: datafile.c
CMakeProject2/utils/: message.c
